--- a/frontend/src/locales/ur/translation.json
+++ b/frontend/src/locales/ur/translation.json
@@ -6,21 +6,27 @@
   "blog": "بلاگ",
   "contact": "رابطہ کریں",
   "login": "لاگ ان",
-  "passion": "خیال رکھنے کا جذبہ",
+
+  "passion": "دیکھ بھال کے لئے جذبہ",
   "readMore": "مزید پڑھیں +",
   "emergencyCases": "ہنگامی معاملات",
-  "emergencyText": "لوریم اِپسَم کے کئی ورژنز دستیاب ہیں...",
-  "doctorsTimetable": "ڈاکٹروں کا شیڈول",
-  "doctorsText": "ڈاکٹروں کی دستیابی چیک کریں اور درست مشورہ حاصل کریں۔",
+  "emergencyText": "لورم ایپسوم کے مختلف ورژن دستیاب ہیں...",
+  "doctorsTimetable": "ڈاکٹر کا شیڈول",
+  "doctorsText": "ڈاکٹروں کی دستیابی چیک کریں اور مناسب مشورہ حاصل کریں۔",
   "timetable": "شیڈول +",
 
-  "slider1Caption": "آپ کی صحت کے لئے حقیقی عزم",
-  "slider1Text": "یہ ایک طے شدہ حقیقت ہے کہ صفحے کے لے آؤٹ کو دیکھتے وقت قاری پڑھنے کے قابل مواد سے ہٹ جاتا ہے۔",
-  "slider2Caption": "آپ کی صحت، ہماری ترجیح",
-  "slider2Text": "ماہرانہ دیکھ بھال کے ساتھ بہترین طبی مدد اور علاج فراہم کرنا۔",
-  "slider3Caption": "جذبے کے ساتھ دیکھ بھال",
-  "slider3Text": "وقف شدہ ڈاکٹر اور عملہ اس بات کو یقینی بنانے کے لئے کہ آپ صحت مند اور خوشحال زندگی گزاریں۔",
+  "slider1Caption": "آپ کی صحت کے لیے حقیقی وابستگی",
+  "slider1Text": "یہ ایک طویل عرصے سے قائم حقیقت ہے کہ قاری صفحہ کے لے آؤٹ کو دیکھتے وقت پڑھنے کے قابل مواد سے توجہ ہٹا سکتا ہے۔",
+  "slider1ExtraText": "ہمارا ہسپتال جدید سہولیات اور چوبیس گھنٹے طبی دیکھ بھال فراہم کرتا ہے۔ بچاؤ سے لے کر خصوصی علاج تک، آپ کی صحت اور حفاظت ہماری اولین ترجیح ہے۔",
 
+  "slider2Caption": "آپ کی صحت، ہماری ترجیح",
+  "slider2Text": "ماہر دیکھ بھال کے ساتھ بہترین طبی تعاون اور علاج فراہم کرنا۔",
+  "slider2ExtraText": "ہم جدید ٹیکنالوجی اور ہمدردانہ دیکھ بھال کو ملا کر ہر مریض کے لیے ذاتی علاج کے منصوبے پیش کرتے ہیں۔ ہمارا تجربہ کار عملہ آپ کی صحت کی راہنمائی ہر قدم پر کرتا ہے۔",
+
+  "slider3Caption": "جذبے کے ساتھ دیکھ بھال",
+  "slider3Text": "مخلص ڈاکٹرز اور عملہ یہ یقینی بناتا ہے کہ آپ صحت مند اور خوشحال زندگی گزاریں۔",
+  "slider3ExtraText": "روٹین چیک اپ سے لے کر ہنگامی مداخلت تک، ہماری وقف ٹیم آپ کی بھلائی کے لیے محنت کرتی ہے۔ ہم جامع دیکھ بھال، مریض کی تعلیم، اور محفوظ علاج کے ماحول پر توجہ مرکوز کرتے ہیں۔"
+,
  "missionTitle": "ہمارا مشن",
 "missionText": "ہمارا پلیٹ فارم صحت کی معلومات کو سادہ، قابل رسائی اور انٹرایکٹو بنانے کے لئے وقف ہے...",
 "getStarted": "شروع کریں",
@@ -77,5 +83,4 @@
   "faculty": "ہماری فیکلٹی",
   "faculty_desc": "تجربہ کار ڈاکٹرز، نرسز اور میڈیکل عملہ جو عالمی معیار کی صحت کی خدمات فراہم کرنے کے لیے پرعزم ہیں۔",
   "awards": "ایوارڈز",
-  "awards_desc": "صحت کی جدت اور کمیونٹی سروس میں شاندار کارکردگی پر دنیا بھر میں تسلیم کیا گیا۔"
-}
+  "awards_desc": "صحت کی جدت اور کمیونٹی سروس میں شاندار کارکردگی پر دنیا بھر میں تسلیم کیا گیا۔"}
