--- a/frontend/src/locales/hi/translation.json
+++ b/frontend/src/locales/hi/translation.json
@@ -6,6 +6,7 @@
   "blog": "ब्लॉग",
   "contact": "संपर्क करें",
   "login": "लॉगिन",
+
   "passion": "देखभाल के प्रति जुनून",
   "readMore": "और पढ़ें +",
   "emergencyCases": "आपातकालीन मामले",
@@ -16,10 +17,16 @@
 
   "slider1Caption": "आपके स्वास्थ्य के प्रति वास्तविक प्रतिबद्धता",
   "slider1Text": "यह एक लंबे समय से स्थापित तथ्य है कि कोई पाठक पृष्ठ की लेआउट को देखते समय पढ़ने योग्य सामग्री से विचलित हो जाएगा।",
+  "slider1ExtraText": "हमारा अस्पताल अत्याधुनिक सुविधाओं और चौबीसों घंटे चिकित्सा ध्यान सुनिश्चित करता है। रोकथाम से लेकर विशेषज्ञ उपचार तक, आपका स्वास्थ्य और सुरक्षा हमारी प्राथमिकता है।",
+
   "slider2Caption": "आपका स्वास्थ्य, हमारी प्राथमिकता",
   "slider2Text": "विशेषज्ञ देखभाल के साथ सर्वोत्तम चिकित्सा समर्थन और उपचार प्रदान करना।",
+  "slider2ExtraText": "हम आधुनिक तकनीक और सहानुभूतिपूर्ण देखभाल को मिलाकर हर रोगी के लिए व्यक्तिगत उपचार योजना प्रदान करते हैं। हमारा अनुभवी स्टाफ आपके स्वास्थ्य यात्रा में हर कदम पर मार्गदर्शन करता है।",
+
   "slider3Caption": "जुनून के साथ देखभाल",
   "slider3Text": "समर्पित डॉक्टर और स्टाफ यह सुनिश्चित करने के लिए कि आप स्वस्थ और खुशहाल जीवन जिएं।",
+  "slider3ExtraText": "रूटीन चेक-अप से लेकर आपातकालीन हस्तक्षेप तक, हमारी समर्पित टीम आपकी भलाई सुनिश्चित करने के लिए tirelessly काम करती है। हम समग्र देखभाल, रोगी शिक्षा, और सुरक्षित उपचार वातावरण पर ध्यान केंद्रित करते हैं।"
+,
 
 "missionTitle": "हमारा मिशन",
 "missionText": "हमारा प्लेटफ़ॉर्म स्वास्थ्य जानकारी को सरल, सुलभ और इंटरैक्टिव बनाने के लिए समर्पित है...",
